--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
     "vue-float-menu": "^1.9.0",
+    "vue-meta": "^2.4.0",
     "vue-nav-ui": "^1.0.5",
     "vue-router": "^4.0.0-0"
   },
